--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             border-radius: 5px;
             width: 25%;
             font-family: Arial, sans-serif;
+            min-width: 350px;
         }
         .control-group {
             margin-bottom: 10px;
