--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <button id="saveButton">Speichern</button>
         <button id="exportButton">exportiere Kistenzettel</button>
         <button id="toggleCameraButton">Ansicht umschalten</button>
-        <button id="arButton">Kiste in AR anzeigen</button>
+        <button id="openARButton">AR-Modus öffnen</button>
         <button class="open-kalkulation-button">Kalkulation</button>
         <button class="saveDataToDatabase">saveDataToDatabase</button>
         <hr>
@@ -421,6 +421,15 @@
         </div>
     </div>
 
+    <div id="ar-container" style="display:none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: 1000;">
+        <a-scene embedded arjs>
+            <a-box id="ar-box" position="0 0.5 0" rotation="0 45 0" material="color: yellow;"></a-box>
+            <a-marker-camera preset="hiro"></a-marker-camera>
+        </a-scene>
+        <button style="position: absolute; top: 10px; right: 10px; z-index: 1001;" onclick="toggleAR()">Schließen</button>
+    </div>
+    
+
 
 
 
@@ -429,7 +438,8 @@
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/controls/OrbitControls.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.14/jspdf.plugin.autotable.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/jsm/webxr/ARButton.js"></script>
+    <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
+    <script src="https://rawcdn.githack.com/AR-js-org/AR.js/3.3.2/aframe/build/aframe-ar.js"></script>
 
 
 
@@ -446,7 +456,6 @@
 
         const renderer = new THREE.WebGLRenderer({ antialias: true });
         renderer.setSize(window.innerWidth, window.innerHeight);
-        renderer.xr.enabled = true; // WebXR-Unterstützung aktivieren
         document.body.appendChild(renderer.domElement);
 
         // OrbitControls für die Steuerung (bestehender Code)
@@ -514,6 +523,36 @@
             steuerung.object = aktuelleKamera;
             steuerung.update();
         }
+
+        function toggleAR() {
+            const arContainer = document.getElementById('ar-container');
+            if (arContainer.style.display === "none") {
+                // AR-Modus aktivieren
+                arContainer.style.display = "block";
+                
+                // Die Kistenparameter aus deiner bestehenden Szene übernehmen
+                const länge = parseFloat(document.getElementById('länge').value) / 100; // Skalierung von cm auf Meter
+                const breite = parseFloat(document.getElementById('breite').value) / 100;
+                const höhe = parseFloat(document.getElementById('höhe').value) / 100;
+
+                // Aktualisiere die Position und Größe der Box in der AR-Szene
+                const arBox = document.getElementById('ar-box');
+                arBox.setAttribute('geometry', {
+                    primitive: 'box',
+                    height: höhe,
+                    width: länge,
+                    depth: breite
+                });
+            } else {
+                // AR-Modus deaktivieren
+                arContainer.style.display = "none";
+            }
+        }
+
+        document.getElementById('openARButton').addEventListener('click', toggleAR);
+
+
+
 
 
 
@@ -1077,9 +1116,6 @@
         // Event-Listener für den Umschalt-Button
         document.getElementById('toggleCameraButton').addEventListener('click', toggleCameraView);
 
-        // Event-Listener für den AR-Button
-        document.getElementById('arButton').addEventListener('click', startAR);
-
         // Event-Listener für den Upload-Button
         document.getElementById('customButton').addEventListener('click', function() {
             document.getElementById('uploadButton').click();
@@ -1228,51 +1264,6 @@
             kameraOrthogonal.updateProjectionMatrix();
             renderer.setSize(window.innerWidth, window.innerHeight);
         });
-
-        function startAR() {
-            // Check if the browser supports WebXR
-            if (navigator.xr) {
-                navigator.xr.requestSession('immersive-ar', {
-                    requiredFeatures: ['hit-test']
-                }).then((session) => {
-                    renderer.xr.setSession(session);
-
-                    const hitTestSource = null;
-                    const hitTestSourceRequested = false;
-
-                    session.addEventListener('select', (event) => {
-                        if (hitTestSource) {
-                            const hit = event.frame.getHitTestResults(hitTestSource);
-                            if (hit.length) {
-                                const hitPose = hit[0].getPose(referenceSpace);
-                                kistengruppe.position.set(hitPose.transform.position.x, hitPose.transform.position.y, hitPose.transform.position.z);
-                            }
-                        }
-                    });
-
-                    session.requestReferenceSpace('local').then((refSpace) => {
-                        referenceSpace = refSpace;
-                        session.requestAnimationFrame(onXRFrame);
-                    });
-
-                    function onXRFrame(time, frame) {
-                        session.requestAnimationFrame(onXRFrame);
-
-                        const viewerSpace = session.requestReferenceSpace('viewer');
-                        if (!hitTestSourceRequested) {
-                            session.requestHitTestSource({ space: viewerSpace }).then((source) => {
-                                hitTestSource = source;
-                            });
-                            hitTestSourceRequested = true;
-                        }
-
-                        renderer.render(szene, aktuelleKamera);
-                    }
-                });
-            } else {
-                alert('WebXR wird in diesem Browser nicht unterstützt');
-            }
-        }
 
         // Initiale Kiste erstellen
         aktualisiereKiste();
