--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@
 
 
     </style>
+
+    <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
+
 </head>
 <body>
     <div class="controls">
@@ -432,6 +435,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.14/jspdf.plugin.autotable.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@webxr-polyfill/webxr-polyfill.min.js"></script>
 
+    <model-viewer id="arViewer" src="model.glb" ar ar-modes="scene-viewer webxr quick-look" environment-image="neutral" skybox-image="neutral" alt="A 3D model of a box" auto-rotate camera-controls style="display:none; width: 100%; height: 500px;"></model-viewer>
 
 
     
@@ -521,7 +525,6 @@
             const isARSupported = await navigator.xr.isSessionSupported('immersive-ar');
             if (isARSupported) {
                 const session = await navigator.xr.requestSession('immersive-ar');
-
                 const renderer = new THREE.WebGLRenderer({ alpha: true });
                 renderer.xr.enabled = true;
                 document.body.appendChild(renderer.domElement);
@@ -545,14 +548,25 @@
                 renderer.xr.setSession(session);
             } else {
                 alert('AR wird auf diesem Gerät nicht unterstützt.');
+                useModelViewerFallback();
             }
         } catch (e) {
             console.error('Unable to start AR session:', e);
+            useModelViewerFallback();
         }
     } else {
         alert('WebXR wird auf diesem Gerät oder Browser nicht unterstützt.');
+        useModelViewerFallback();
     }
 }
+
+function useModelViewerFallback() {
+    const arViewer = document.getElementById('arViewer');
+    arViewer.style.display = 'block'; // Zeigt das Model-Viewer-Element an
+}
+
+document.getElementById('startARButton').addEventListener('click', startAR);
+
 
 
 
